--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,10 +6,30 @@
 
 
         <div class="container">
+            <hr>
+            <h1>Perguntas</h1>
+            <hr>
+            <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+            <hr>
 
             <% perguntas.forEach(pergunta => { %>
-                <p> <h2><%= pergunta.titulo %> </h2> </p>
-                <p> <h1><%= pergunta.descricao %> </h1> </p>
+            <div class="card">
+                <div class="card-body">
+
+                    <h3><%= pergunta.titulo %></h3>
+
+                </div>
+
+                <div class="card-footer">
+                    <button class="btn btn-primary">Responder</button>
+                </div>
+
+
+            </div>
+
+           
+                
+              
 
             <% }) %>
 
