--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,17 +2,15 @@
 <body>
     <%- include ('./partials/navbar.ejs') %>
 
-
-
-
         <div class="container">
             <hr>
             <h1>Perguntas</h1>
             <hr>
-            <a href="/perguntar" class="btn btn-primary">Perguntar</a>
+            <a href="/pergunta" class="btn btn-primary">Perguntar</a>
             <hr>
 
             <% perguntas.forEach(pergunta => { %>
+
             <div class="card">
                 <div class="card-body">
 
@@ -21,14 +19,14 @@
                 </div>
 
                 <div class="card-footer">
-                    <button class="btn btn-primary">Responder</button>
+
+                    <a href="/pergunta/<%= pergunta.id %>" >
+                        <button class="btn btn-primary">Responder</button>
+                    </a>
+
                 </div>
 
-
-            </div>
-
-           
-                
+            </div>         
               
 
             <% }) %>
