--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,11 +6,11 @@
             <hr>
             <h1>Perguntas</h1>
             <hr>
-            <a href="/pergunta" class="btn btn-primary">Perguntar</a>
+            <a href="/perguntar" class="btn btn-primary">Perguntar</a>
             <hr>
 
             <% perguntas.forEach(pergunta => { %>
-
+            </br>
             <div class="card">
                 <div class="card-body">
 
